# mais

./: .gitignore  .gitmodules  LICENSE  README.md
power_estimator/: .mxproject  Makefile  STM32L100RCTx_FLASH.ld  defs.h  resistor_calculator.gnumeric  stm32l.ioc
power_estimator/Core/Inc/: app.h  cap.h  chgdischg.h  console.h  dut.h  fixed.h  internal_adc.h  ldo.h  ltc2451.h  main.h  serial.h  slp_glue.h  stm32l1xx_hal_conf.h  stm32l1xx_it.h
power_estimator/Core/Src/: app.c  cap.c  chgdischg.c  console.c  crc16.h  debug.c  debug.h  dut.c  internal_adc.c  ldo.c  ltc2451.c  main.c  serial.c  slp.c  slp.h  stm32l1xx_hal_msp.c  stm32l1xx_hal_timebase_tim.c  stm32l1xx_it.c  vsnprintf.c
power_estimator/Drivers/CMSIS/Device/ST/STM32L1xx/Source/Templates/arm/: startup_stm32l100xb.s  startup_stm32l100xba.s  startup_stm32l151xb.s  startup_stm32l151xba.s  startup_stm32l151xc.s  startup_stm32l151xca.s  startup_stm32l151xd.s  startup_stm32l151xdx.s  startup_stm32l151xe.s  startup_stm32l152xb.s  startup_stm32l152xba.s  startup_stm32l152xc.s  startup_stm32l152xca.s  startup_stm32l152xd.s  startup_stm32l152xdx.s  startup_stm32l152xe.s  startup_stm32l162xc.s  startup_stm32l162xca.s  startup_stm32l162xdx.s  startup_stm32l162xe.s
uair/: Doxyfile  mainpage.dox
uair/Requirements/: BSP_flash_HLR.odt
uair/Software/: Makefile.inc
uair/Software/app/: app.h
uair/Software/app/uair_lorawan/: CMakeLists.txt  Makefile  anomaly_guard.c  anomaly_guard.h  controller.c  controller.h  lora_app.c  lora_app.h  lora_info.c  main.c  main.cc  main_hostmode.cc  main_network_t.cc  main_t.cc  payload.h  sensors.c  sensors.h  sys_app.c  sys_app.h  uair_payloads.h
uair/Software/app/uair_lorawan/conf/: Commissioning.h  app_conf.h  radio_conf.h  se-identity.h
uair/Software/app/uair_lorawan/io/: CMakeLists.txt  UAIR_config_api.cc  UAIR_config_api.h  UAIR_config_api_t.cc  UAIR_io_audit.c  UAIR_io_audit.cc  UAIR_io_audit.h  UAIR_io_audit_t.cc  UAIR_io_base.c  UAIR_io_base.h  UAIR_io_base_t.cc  UAIR_io_config.c  UAIR_io_config.cc  UAIR_io_config.h  UAIR_io_config_t.cc
uair/Software/app/uair_lorawan/lib_dependency/: lora_info.h  subghz.h  timer.h
uair/Software/app/uair_weather_data/: CMakeLists.txt  Makefile  lora_app.c  lora_app.h  lora_info.c  main.c  sys_app.c  uartrx.c  uartrx.h  weather.c  weather.h
uair/Software/app/uair_weather_data/conf/: .gitignore  app_conf.h  app_conf_alvie.h  lorawan_conf.h  radio_conf.h  se-identity.h
uair/Software/app/uair_weather_data/lib_dependency/: systime.h
uair/Software/gas-algorithm-libraries/3.0.0/oaq_2nd_gen/Darwin/x86_64/src/: Makefile
uair/Software/gas-algorithm-libraries/oaq_2nd_gen/Darwin/x86_64/src/: Makefile  oaq_2nd_gen.c
uair/Software/gas-algorithm-libraries/oaq_2nd_gen/STM32WL55xx/: README.licensing  zmod4xxx_cleaning.h
uair/Software/lib/: UAIR_bm.c  UAIR_bm.h
uair/Software/lib/HS300X/: HS300X.c  HS300X.h
uair/Software/lib/UAIR_BSP/: BSP.h  UAIR_BSP.c  UAIR_BSP.h  UAIR_BSP_air_quality.c  UAIR_BSP_air_quality.h  UAIR_BSP_bm.c  UAIR_BSP_bm.h  UAIR_BSP_clk_timer.c  UAIR_BSP_clk_timer.h  UAIR_BSP_commissioning.c  UAIR_BSP_commissioning.h  UAIR_BSP_conf.h  UAIR_BSP_error.c  UAIR_BSP_error.h  UAIR_BSP_externaltemp.c  UAIR_BSP_externaltemp.h  UAIR_BSP_flash.c  UAIR_BSP_flash.h  UAIR_BSP_flash_storage.c  UAIR_BSP_flash_t.cc  UAIR_BSP_gpio.c  UAIR_BSP_gpio.h  UAIR_BSP_i2c.c  UAIR_BSP_i2c.h  UAIR_BSP_internaltemp.c  UAIR_BSP_internaltemp.h  UAIR_BSP_internaltemp_t.cc  UAIR_BSP_lpm.c  UAIR_BSP_lpm.h  UAIR_BSP_microphone.c  UAIR_BSP_microphone.h  UAIR_BSP_powerzone.c  UAIR_BSP_powerzone.h  UAIR_BSP_radio.c  UAIR_BSP_radio.h  UAIR_BSP_serial.c  UAIR_BSP_serial.h  UAIR_BSP_spi.c  UAIR_BSP_types.h  UAIR_BSP_watchdog.c  (+6 more)
uair/Software/lib/UAIR_BSP/pvt/: UAIR_BSP_air_quality_p.h  UAIR_BSP_clk_timer_p.h  UAIR_BSP_commissioning_p.h  UAIR_BSP_externaltemp_p.h  UAIR_BSP_flash_p.h  UAIR_BSP_gpio_p.h  UAIR_BSP_i2c_p.h  UAIR_BSP_internaltemp_p.h  UAIR_BSP_microphone_p.h  UAIR_BSP_powerzone_p.h  UAIR_BSP_watchdog_p.h
uair/Software/lib/UAIR_HAL/: HAL.h  HAL_bm.c  HAL_bm.h  HAL_clk.c  HAL_clk.h  HAL_gpio.c  HAL_gpio.h  UAIR_hal.c  UAIR_hal.h  UAIR_lpm.c  UAIR_lpm.h  UAIR_rtc.c  UAIR_rtc.h
uair/Software/lib/UAIR_TRACER/: GNSE_tracer.h  UAIR_tracer.c  UAIR_tracer.h
uair/Software/lib/UAIR_TRACER/adv_tracer/: stm32_adv_tracer.c  stm32_adv_tracer.h  stm32_adv_tracer_conf.h  stm32_adv_usart.c  stm32_adv_usart.h  stm32_tiny_vsnprintf.c  stm32_tiny_vsnprintf.h
uair/Software/lib/UAIR_TRACER/tiny_printf/: tiny_printf.c  tiny_printf.h  tiny_printf_conf.h
uair/Software/lib/VM3011/: VM3011.c  VM3011.h  vestion_i2c_implementation.h
uair/Software/lib/ZMOD4510/: ZMOD4510.c  ZMOD4510.h  ZMOD4510_OAQ1.c  ZMOD4510_OAQ1.h  ZMOD4510_OAQ2.c  ZMOD4510_OAQ2.h  oaq_2nd_gen.h  zmod4510_config_oaq1.c  zmod4510_config_oaq1.h  zmod4510_config_oaq2.c  zmod4510_config_oaq2.h  zmod4xxx_api.c  zmod4xxx_api.h  zmod4xxx_types.h
uair/grapher/: .gitignore  README  colorallocator.h  dataset.h  datasetentry.cpp  datasetentry.h  device.cpp  device.h  devicecollection.h  devicedataset.h  devicedatasetentry.cpp  devicedatasetentry.h  grapher.cpp  grapher.h  grapher.pro  jsonutils.cpp  jsonutils.h  main.cpp  newgraphdialog.cpp  newgraphdialog.h  payload.h  registeredgraph.h  registeredgraphmodel.cpp  registeredgraphmodel.h  ttnjson.cpp  ttnjson.h
uair/hostmode/lib/STM32WLxx_LoRaWAN/LoRaWAN/Crypto/: lorawan_aes.h
uair/hostmode/lib/STM32WLxx_LoRaWAN/LoRaWAN/LmHandler/: LmHandler.c
uair/hostmode/lib/STM32WLxx_LoRaWAN/LoRaWAN/LmHandler/old/: LmHandler.h
uair/hostmode/lib/STM32WLxx_LoRaWAN/LoRaWAN/Mac/old/: LoRaMac.h  LoRaMacTypes.h
uair/hostmode/lib/STM32WLxx_LoRaWAN/LoRaWAN/Mac/old/region/: Region.h
uair/hostmode/lib/STM32WLxx_LoRaWAN/SubGHz_Phy/stm32_radio_driver/: hw_radio.h  hw_radio_instance.c
